hero section mobile view fix

--- a/src/components/Header/MobileView/style.css
+++ b/src/components/Header/MobileView/style.css
@@ -8,6 +8,7 @@
     align-items: baseline;
     padding-right: 10px;
     padding-top: 10px;
+    margin-top: -100px;
 }
 .close-btn{
     display: flex;
